--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
     "@prisma/studio-core": "^0.14.0",
     "@repo/utils": "workspace:*",
     "better-auth": "^1.4.19",
+    "cheerio": "^1.2.0",
     "dotenv": "^17.3.1",
     "hono": "^4.12.2",
     "pg": "^8.18.0",
