--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,8 +20,8 @@
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:validate": "prisma validate",
     "prisma:format": "prisma format",
-    "add-admin": "tsx scripts/add-admin.ts",
-    "sync-json-data": "tsx scripts/sync-json-data.ts"
+    "add-admin": "node ./dist/add-admin.mjs",
+    "sync-json-data": "node ./dist/sync-json-data.mjs"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
@@ -36,7 +36,6 @@
     "hono": "^4.12.2",
     "pg": "^8.18.0",
     "socket.io": "^4.8.3",
-    "tsx": "^4.21.0",
     "winston": "^3.19.0",
     "winston-transport": "^4.9.0",
     "zod": "^4.3.6"
