chore: update dependencies and add Redis caching
- Bump @melv1c/ui-core to version 1.1.3 in admin and frontend package.json files.
- Add Redis configuration to backend .env.example and package.json.
- Implement Redis caching in backend with new redis.ts file.
- Update jobs route to utilize Redis caching for job listings.
- Refactor useCultureJobs hook to remove page parameter and adjust API call.
- Enhance frontend JobsBoard component with filtering options and improved layout.
- Add Redis service to docker-compose files for local development.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -9,6 +9,7 @@ ADMIN_URL=http://localhost:5174
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
+REDIS_URL=redis://localhost:6379
 
 # BetterAuth Configuration
 BETTER_AUTH_SECRET=your_secret_key_here_of_at_least_32_characters
