--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.3.1",
     "hono": "^4.12.2",
     "pg": "^8.18.0",
+    "redis": "^5.11.0",
     "socket.io": "^4.8.3",
     "winston": "^3.19.0",
     "winston-transport": "^4.9.0",
