--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -17,8 +17,23 @@ services:
     networks:
       - fullstack-network
 
+  redis:
+    image: redis:7-alpine
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 5s
+      timeout: 3s
+      retries: 5
+    networks:
+      - fullstack-network
+
 volumes:
   db-data:
+  redis-data:
 
 networks:
   fullstack-network:
