--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -36,6 +36,7 @@
     "hono": "^4.12.2",
     "pg": "^8.18.0",
     "redis": "^5.11.0",
+    "sanitize-html": "^2.17.1",
     "socket.io": "^4.8.3",
     "winston": "^3.19.0",
     "winston-transport": "^4.9.0",
@@ -45,6 +46,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
+    "@types/sanitize-html": "^2.16.0",
     "concurrently": "^9.2.1",
     "prisma": "^7.4.1",
     "tsdown": "^0.20.3",
